--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
 		"type": "git",
 		"url": "https://idontknow/todo.git"
 	},
-	"author": "vince"
+	"author": "vince",
+	"description": "A project that does something awesome"
 }
