--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"moment": "2.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
@@ -12,5 +13,10 @@
 		"url": "https://idontknow/todo.git"
 	},
 	"author": "vince",
-	"description": "A project that does something awesome"
+	"description": "A project that does something awesome",
+	"keywords": [ "freecodecamp", "related", "words" ],
+	"license": "MIT",
+	"version": "1.2.0"
+
+
 }
